@@ -43,6 +43,7 @@ krb5_auth_dialog_CPPFLAGS = \
 	-I$(top_srcdir)/secmem \
 	-DKA_DATA_DIR=\""$(pkgdatadir)"\" \
 	-DLOCALE_DIR=\""$(localedir)/"\" \
+	-DBIN_DIR=\""$(bindir)/"\" \
 	$(AM_CPPFLAGS) \
 	$(NULL)
 
